--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -16,4 +16,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
+} */
